<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/chargeButtonPay"
        style="@style/CalculatorPayButton"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/agent_charge_pay_button_active_background"
        android:text="@string/button_pay" />

    <LinearLayout
        android:id="@+id/container_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/chargeButtonPay"
        android:background="@color/lightGrey"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/chargeButton7"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/chargeButton4"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/chargeButton1"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_1" />

            <ImageButton
                android:id="@+id/chargeButtonDelete"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:src="@drawable/backspace_icon" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/chargeButton8"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/chargeButton5"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/chargeButton2"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/chargeButton0"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/chargeButton9"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/chargeButton6"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/chargeButton3"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/chargeButtonPercent"
                style="@style/CalculatorNumberButton"
                android:layout_width="match_parent"
                android:text="@string/button_percent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/chargeButtonDivision"
                style="@style/CalculatorSymbolButton"
                android:layout_width="match_parent"
                android:text="@string/button_division" />

            <Button
                android:id="@+id/chargeButtonMultiplication"
                style="@style/CalculatorSymbolButton"
                android:layout_width="match_parent"
                android:text="@string/button_times" />

            <Button
                android:id="@+id/chargeButtonSubtraction"
                style="@style/CalculatorSymbolButton"
                android:layout_width="match_parent"
                android:text="@string/button_minus" />

            <Button
                android:id="@+id/chargeButtonAddition"
                style="@style/CalculatorBigSymbolButton"
                android:layout_width="match_parent"
                android:text="@string/button_plus" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#E7E9F1"
        android:layout_height="match_parent"
        android:layout_above="@id/container_calculator">

        <LinearLayout
            android:id="@+id/layout_calculator_input"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chargeTextViewInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="40sp" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/layout_calculation_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_calculator_input"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/chargeTextViewEquation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/headerTextColor"
                android:textSize="20sp" />
        </HorizontalScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loading_overlay"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBlackOverlay"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>