<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="50dp"
        android:paddingTop="64dp"
        android:paddingEnd="50dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/loginAppInfoBackground"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginMikaImage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mika_splash_screen_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />


        <ImageView
            android:id="@+id/loginUsernameIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_nama"
            app:layout_constraintBottom_toBottomOf="@id/loginUsernameLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUsernameLayout"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/AppTheme.ErrorEditText"
            app:layout_constraintBottom_toTopOf="@id/loginPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/loginUsernameIcon">

            <EditText
                android:id="@+id/loginUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/loginPasswordEditText"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                tools:ignore="Autofill"
                tools:text="123123" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/loginPasswordIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_kunci"
            app:layout_constraintBottom_toBottomOf="@id/loginPasswordLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordLayout"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/AppTheme.ErrorEditText"
            app:layout_constraintBottom_toTopOf="@id/loginLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/loginPasswordIcon"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#fff">

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                tools:ignore="Autofill"
                tools:text="123123" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/loginLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="MASUK"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/loginAppInfoBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/agent_transaction_bottom_sheet_background"
        android:backgroundTint="#1e95cc"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/loginAppInfoVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp"
            tools:text="version 1.0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="© 2019 PT. Mika Informatika Indonesia"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="All Right Reserved"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>