...
    <string name="phone">Nomor Telepon:</string>
    <string name="time">Waktu:</string>
    <string name="button_00">00</string>
    <string name="button_dot">.</string>
    <string name="log_out">Log Out</string>

    <string name="transaction_success">Transaksi Sukses</string>
    <string name="transaction_failed">Transaksi Gagal</string>
    <string name="transaction_cancelled">Transaksi Dibatalkan</string>

    <string name="dialog_text">Anda yakin mau keluar?</string>
    <string name="ok">Ya</string>
    <string name="cancel">Tidak</string>
...
